# TPM_Simulation

./: .gitignore  README.md  pyproject.toml
data/runs/21049cfc-8c6e-42a0-82c6-3305223062b1/: action_log.json  eval.json  eval.txt  timeline.txt
data/runs/7bab4df9-3c0a-44c5-a183-b910f6a89c00/: action_log.json  eval.json  eval.txt  timeline.txt
data/runs/f53381b3-9861-4200-9a61-06bdd790b244/: action_log.json  eval.json  eval.txt  summary.txt  timeline.txt
docs/: architecture.md  scenario-authoring.md
scenarios/first-week-pm/: coworkers.yaml  eval_rubric.yaml  message_templates.yaml  policy_templates.yaml  scenario.yaml
scenarios/first-week-pm/agents/: inbox_first.yaml  meeting_first.yaml  spam_ping.yaml  (+1 more)
src/pm_sim/: __init__.py
tests/: test_action_duration.py  test_action_resolver.py  test_agent_handlers.py  test_agent_turn.py  test_cli_run.py  test_clock.py  test_conditions.py  test_cooperation_gates.py  test_drift.py  test_eval_compare.py  test_eval_conditions.py  test_eval_metrics.py  test_eval_scoring.py  test_event_queue.py  test_health.py  test_interaction_timeline.py  test_milestone.py  test_npc_latency.py  test_npc_resolver.py  test_observation.py  test_personas.py  test_policy_picker.py  test_reset.py  test_run_loop.py  test_scenario.py  test_schema.py  test_strategy_ordering.py  test_task_complete.py  test_task_timers.py  test_tools_chat.py  test_tools_email.py  test_tools_task.py  test_turn_collapser.py  test_turn_log.py  test_turn_stdout.py  test_vendor_turnaround.py  test_wait_turn.py
tests/fixtures/: triage_first_minimal.yaml  wait_only.yaml
(+68 files in other folders)
