[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pm-sim"
version = "0.1.0"
description = "Simulation environment for a PM's first week at a SaaS company"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
pm-sim = "pm_sim.cli.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pm_sim = ["sim/schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: integration tests that run full or long simulations",
]
